--- a/micrograd_lecture_first_half_roughly.ipynb
+++ b/micrograd_lecture_first_half_roughly.ipynb
@@ -101,12 +101,106 @@
    "execution_count": 5
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T07:29:08.758598Z",
+     "start_time": "2025-11-17T07:29:08.753762Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "h = 0.000001\n",
+    "x = 2/3\n",
+    "(f(x + h) - f(x))/h"
+   ],
+   "id": "fa8621df8f06be61",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.999378523327323e-06"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T07:34:04.278450Z",
+     "start_time": "2025-11-17T07:34:04.274157Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# les get more complex\n",
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "d = a*b + c\n",
+    "print(d)"
+   ],
+   "id": "97e79703b680af15",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-17T08:15:48.236194Z",
+     "start_time": "2025-11-17T08:15:48.232312Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "h = 0.0001\n",
+    "\n",
+    "# inputs\n",
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "\n",
+    "d1 = a*b + c\n",
+    "c += h\n",
+    "d2 = a*b + c\n",
+    "\n",
+    "print('d1', d1)\n",
+    "print('d2', d2)\n",
+    "print('slope', (d2 - d1)/h)"
+   ],
+   "id": "476c35f8a52f3873",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1 4.0\n",
+      "d2 4.0001\n",
+      "slope 0.9999999999976694\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "fa8621df8f06be61"
+   "id": "99426c5911fa142e"
   }
  ],
  "metadata": {
