understanding the functions

--- a/micrograd_lecture_first_half_roughly.ipynb
+++ b/micrograd_lecture_first_half_roughly.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-17T06:43:55.160896Z",
-     "start_time": "2025-11-17T06:43:52.568550Z"
+     "end_time": "2025-11-18T06:09:39.831773Z",
+     "start_time": "2025-11-18T06:09:39.387712Z"
     }
    },
    "source": [
@@ -17,13 +17,13 @@
     "%matplotlib inline"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T06:44:05.138509Z",
-     "start_time": "2025-11-17T06:44:05.128568Z"
+     "end_time": "2025-11-18T06:09:41.736515Z",
+     "start_time": "2025-11-18T06:09:41.733475Z"
     }
    },
    "cell_type": "code",
@@ -33,13 +33,13 @@
    ],
    "id": "a5aebe18f29d678",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T06:44:28.291156Z",
-     "start_time": "2025-11-17T06:44:28.279360Z"
+     "end_time": "2025-11-18T06:09:42.514041Z",
+     "start_time": "2025-11-18T06:09:42.509002Z"
     }
    },
    "cell_type": "code",
@@ -52,18 +52,46 @@
        "20.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T06:44:50.404796Z",
-     "start_time": "2025-11-17T06:44:50.250178Z"
+     "end_time": "2025-11-18T06:09:53.537200Z",
+     "start_time": "2025-11-18T06:09:53.531907Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "xs",
+   "id": "2caa23cec543ab98",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-5.  , -4.75, -4.5 , -4.25, -4.  , -3.75, -3.5 , -3.25, -3.  ,\n",
+       "       -2.75, -2.5 , -2.25, -2.  , -1.75, -1.5 , -1.25, -1.  , -0.75,\n",
+       "       -0.5 , -0.25,  0.  ,  0.25,  0.5 ,  0.75,  1.  ,  1.25,  1.5 ,\n",
+       "        1.75,  2.  ,  2.25,  2.5 ,  2.75,  3.  ,  3.25,  3.5 ,  3.75,\n",
+       "        4.  ,  4.25,  4.5 ,  4.75])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T06:09:44.113264Z",
+     "start_time": "2025-11-18T06:09:43.989104Z"
     }
    },
    "cell_type": "code",
@@ -77,10 +105,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7e2aa0267b90>]"
+       "[<matplotlib.lines.Line2D at 0x7d1ff4a50d10>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -98,7 +126,37 @@
      }
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T06:10:20.013883Z",
+     "start_time": "2025-11-18T06:10:20.009555Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "ys",
+   "id": "7ba69c08d238ec4c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100.    ,  91.6875,  83.75  ,  76.1875,  69.    ,  62.1875,\n",
+       "        55.75  ,  49.6875,  44.    ,  38.6875,  33.75  ,  29.1875,\n",
+       "        25.    ,  21.1875,  17.75  ,  14.6875,  12.    ,   9.6875,\n",
+       "         7.75  ,   6.1875,   5.    ,   4.1875,   3.75  ,   3.6875,\n",
+       "         4.    ,   4.6875,   5.75  ,   7.1875,   9.    ,  11.1875,\n",
+       "        13.75  ,  16.6875,  20.    ,  23.6875,  27.75  ,  32.1875,\n",
+       "        37.    ,  42.1875,  47.75  ,  53.6875])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {
